# frigate_user_project

./: .gitignore  Makefile  README.md  flake.nix
.github/actions/setup-dependencies/: action.yaml
.github/workflows/: test.yaml
def/: ahb_counter.def  user_project_wrapper.def
gds/: ahb_counter.gds  user_project_wrapper.gds
lef/: ahb_counter.lef  user_project_wrapper.lef
lib/: ahb_counter.lib  user_project_wrapper.lib
mag/: ahb_counter.mag  user_project_wrapper.mag
openlane/: copy_views.sh
openlane/ahb_counter/: base.sdc  config.yaml  pin_order.cfg  signoff.sdc
openlane/user_project_wrapper/: base.sdc  config.yaml  fixed_config.yaml  signoff.sdc
openlane/user_project_wrapper/fixed_dont_change/: README.md  def.tcl  fixed_config.yaml  (+2 more)
openlane_plugin_Frigate/: __init__.py  pyproject.toml
openlane_plugin_Frigate/openlane_plugin_Frigate/: __init__.py
openlane_plugin_frigate/: default.nix
openlane_plugin_frigate/openlane_plugin_frigate/: __init__.py
sdc/: ahb_counter.sdc  user_project_wrapper.sdc
signoff/ahb_counter/: metrics.csv  resolved.json
signoff/user_project_wrapper/: metrics.csv  resolved.json
spef/: ahb_counter.spef
spef/multicorner/: ahb_counter.max.spef  ahb_counter.min.spef  ahb_counter.nom.spef  user_project_wrapper.max.spef  user_project_wrapper.min.spef  user_project_wrapper.nom.spef
verilog/dv/: setup-cocotb.py
verilog/gl/: ahb_counter.v
verilog/includes/: includes.gl.frigate_user_project  includes.rtl.frigate_user_project
verilog/rtl/: ahb_counter.v  defines.v  user_defines.v  user_project_wrapper.v
(+28 files in other folders)
