[tool.poetry]
name = "openlane-plugin-frigate"
version = "1.0.0"
description = "Internal plugin for Misc Frigate Functions"
authors = ["Efabless Corporation <marwan.abbas@efabless.com>"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

[tool.poetry.dependencies]
python = ">=3.8"
openlane = ">=2.3.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
